--- a/package.json
+++ b/package.json
@@ -1,5 +1,6 @@
 {
   "name": "frontend",
+  "homepage": "https://AishwaryaSh25.github.io/Zwiggy-app/",
   "private": true,
   "version": "0.0.0",
   "type": "module",
